--- a/deploy.yml
+++ b/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         run: pip install -U git+https://github.com/EsauM10/cron_viewer.git
 
       - name: Generate Cron Docs
-        run: cron deploy --output=crons --env_file=".env"
+        run: cronv deploy --output=crons --env_file=".env"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
